# pokedex-irl

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pants.toml
docker/: nginx.conf  start.sh
pokedex-service/: .gitignore  BUILD  README.md  pyproject.toml  requirements.txt
pokedex-service/src/pokedex/: BUILD  config.py  conftest.py  database.py  llm.py  main.py
pokedex-service/src/pokedex/agent/: agents.py
pokedex-service/src/pokedex/agent/explainer/: agent.py  nodes.py  schema.py
pokedex-service/src/pokedex/agent/scanner/: agent.py  nodes.py  schema.py
pokedex-service/src/pokedex/creature/: dependencies.py  enums.py  models.py  router.py  service.py  test_dependencies.py  test_router.py  test_service.py  test_utils.py  utils.py
pokedex-ui/: README.md  index.html  package-lock.json  package.json
pokedex-ui/src/: App.css  App.tsx  CreatureCard.tsx  CreatureList.tsx  CustomDropdown.tsx  NavBar.tsx  ScanPopup.tsx  index.css
